# rs-ffi

./: README.md
0_sum_c_calling_rust/: Cargo.toml  Makefile
0_sum_c_calling_rust/c-src/: Makefile  main.c
0_sum_c_calling_rust/rs-src/: lib.rs
1_sum_rust_calling_c/: Cargo.toml  Makefile
1_sum_rust_calling_c/c-src/: Makefile
1_sum_rust_calling_c/rs-src/: build.rs  main.rs
2_structs_c_calling_rust/: Cargo.toml
2_structs_c_calling_rust/c-src/: Makefile  main.c
2_structs_c_calling_rust/rs-src/: lib.rs
3_structs_rust_calling_c/: Cargo.toml  Makefile
3_structs_rust_calling_c/c-src/: Makefile  lib.c
3_structs_rust_calling_c/rs-src/: main.rs
4_structs_enums_c_calling_rust_cbindgen/: Cargo.toml
4_structs_enums_c_calling_rust_cbindgen/c-src/: .gitignore  Makefile  main.c
4_structs_enums_c_calling_rust_cbindgen/rs-src/: build.rs  lib.rs
5_sum_bindgen/: Cargo.toml  Makefile
5_sum_bindgen/c-src/: Makefile  lib.c
5_sum_bindgen/rs-src/: build.rs  main.rs
